lots off change

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
-<router-outlet />
+<nz-layout>
+  <nz-header>
+    <job-portal-header />
+  </nz-header>
+  <nz-content>
+    <router-outlet />
+  </nz-content>
+  <nz-footer>
+    <job-portal-footer />
+  </nz-footer>
+</nz-layout>
