all UI library removed

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,49 +1,1 @@
-<div class="container">
-  <span class="brand-logo" routerLink="/">
-    <nz-icon nzType="laptop" nzTheme="outline" />
-    Job Board
-  </span>
-
-  <span class="spacer"></span>
-
-  <!-- <nav>
-      <a mat-button routerLink="/jobs" routerLinkActive="active">
-        <mat-icon>search</mat-icon>
-        Find Jobs
-      </a>
-      
-      <a mat-button routerLink="/companies" routerLinkActive="active" *ngIf="!isLoggedIn || currentUser?.role !== userRoles.EMPLOYER">
-        <mat-icon>business</mat-icon>
-        Companies
-      </a>
-      
-      <ng-container *ngIf="isLoggedIn">
-        <a mat-button (click)="navigateToDashboard()">
-          <mat-icon>dashboard</mat-icon>
-          Dashboard
-        </a>
-        
-        <a mat-button routerLink="/profile" routerLinkActive="active">
-          <mat-icon>person</mat-icon>
-          My Profile
-        </a>
-        
-        <button mat-button (click)="logout()">
-          <mat-icon>exit_to_app</mat-icon>
-          Logout
-        </button>
-      </ng-container>
-      
-      <ng-container *ngIf="!isLoggedIn">
-        <a mat-button routerLink="/auth/login" routerLinkActive="active">
-          <mat-icon>login</mat-icon>
-          Login
-        </a>
-        
-        <a mat-raised-button color="accent" routerLink="/auth/register" routerLinkActive="active">
-          <mat-icon>person_add</mat-icon>
-          Register
-        </a>
-      </ng-container>
-    </nav> -->
-</div>
+<p>header works!</p>
