--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-@import 'tailwindcss';
+@use 'tailwindcss';
 @plugin "tailwindcss-primeui";
 @custom-variant dark (&:where(.my-app-dark, .my-app-dark *)); //dark mode configuration
